# ganglia-monitoring

./: CMakeLists.txt  modroxie.py  modroxie.pyconf  version.cmake
cmake_modules/: gmCommonSetup.cmake
cmake_modules/dependencies/: el6.cmake  precise.cmake  yakkety.cmake
esp/scm/: additional.cmake  ws_rrd.ecm
esp/services/ws_rrd/: CMakeLists.txt  RRDGraphWrapper.cpp
esp/src/: CMakeLists.txt
esp/src/ganglia/: CMakeLists.txt  ganglia.json
scripts/: getMetrics.sh.in
vm_precise/: install_graphs_helper.sh
